--- a/Gwfa-paris.ipynb
+++ b/Gwfa-paris.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,20 +338,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>10.0</th>\n",
+       "      <th>14.142135623730951</th>\n",
+       "      <th>20.0</th>\n",
+       "      <th>28.284271247461902</th>\n",
+       "      <th>40.0</th>\n",
+       "      <th>56.568542494923804</th>\n",
+       "      <th>80.0</th>\n",
+       "      <th>113.13708498984761</th>\n",
+       "      <th>160.0</th>\n",
+       "      <th>226.27416997969522</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13174120</td>\n",
+       "      <td>644570</td>\n",
+       "      <td>6857147</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>241.0</td>\n",
+       "      <td>438.0</td>\n",
+       "      <td>732.0</td>\n",
+       "      <td>890.0</td>\n",
+       "      <td>2319.0</td>\n",
+       "      <td>6218.0</td>\n",
+       "      <td>10244.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13174121</td>\n",
+       "      <td>644570</td>\n",
+       "      <td>6857148</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>455.0</td>\n",
+       "      <td>746.0</td>\n",
+       "      <td>890.0</td>\n",
+       "      <td>2323.0</td>\n",
+       "      <td>6264.0</td>\n",
+       "      <td>10251.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13174122</td>\n",
+       "      <td>644570</td>\n",
+       "      <td>6857149</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>759.0</td>\n",
+       "      <td>893.0</td>\n",
+       "      <td>2327.0</td>\n",
+       "      <td>6309.0</td>\n",
+       "      <td>10259.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13174123</td>\n",
+       "      <td>644570</td>\n",
+       "      <td>6857150</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>287.0</td>\n",
+       "      <td>491.0</td>\n",
+       "      <td>765.0</td>\n",
+       "      <td>898.0</td>\n",
+       "      <td>2330.0</td>\n",
+       "      <td>6353.0</td>\n",
+       "      <td>10267.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13174124</td>\n",
+       "      <td>644570</td>\n",
+       "      <td>6857151</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>509.0</td>\n",
+       "      <td>768.0</td>\n",
+       "      <td>908.0</td>\n",
+       "      <td>2334.0</td>\n",
+       "      <td>6395.0</td>\n",
+       "      <td>10275.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index       x        y  10.0  14.142135623730951   20.0  \\\n",
+       "0  13174120  644570  6857147  30.0                57.0  122.0   \n",
+       "1  13174121  644570  6857148  35.0                65.0  134.0   \n",
+       "2  13174122  644570  6857149  41.0                73.0  146.0   \n",
+       "3  13174123  644570  6857150  47.0                83.0  159.0   \n",
+       "4  13174124  644570  6857151  54.0                94.0  172.0   \n",
+       "\n",
+       "   28.284271247461902   40.0  56.568542494923804   80.0  113.13708498984761  \\\n",
+       "0               241.0  438.0               732.0  890.0              2319.0   \n",
+       "1               256.0  455.0               746.0  890.0              2323.0   \n",
+       "2               271.0  472.0               759.0  893.0              2327.0   \n",
+       "3               287.0  491.0               765.0  898.0              2330.0   \n",
+       "4               301.0  509.0               768.0  908.0              2334.0   \n",
+       "\n",
+       "    160.0  226.27416997969522  \n",
+       "0  6218.0             10244.0  \n",
+       "1  6264.0             10251.0  \n",
+       "2  6309.0             10259.0  \n",
+       "3  6353.0             10267.0  \n",
+       "4  6395.0             10275.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neighbors.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighbors.df.to_csv('neighbors_paris.csv', compression='zip')"
+    "neighbors.to_csv('neighbors_paris.csv', compression='zip')"
    ]
   },
   {
